--- a/app/src/main/res/menu/deep_thought_menu.xml
+++ b/app/src/main/res/menu/deep_thought_menu.xml
@@ -8,23 +8,32 @@
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="collapseActionView"/>
     <item
+        android:icon="@drawable/ic_settings_24"
+        android:title="settings"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/home"
         android:contentDescription="@string/content_description_home"
-        android:icon="@drawable/baseline_home_24"
+        android:icon="@drawable/ic_home_24"
         android:title="@string/home"
         app:showAsAction="always" />
 
+
     <item
-        android:id="@+id/settings"
+        android:icon="@drawable/ic_lens_24"
+        android:title="binoculars"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/config"
         android:contentDescription="@string/content_description_settings"
-        android:icon="@drawable/baseline_settings_circle_24"
+        android:icon="@drawable/ic_settings_circle_24"
         android:title="@string/settings"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/notifications"
         android:contentDescription="@string/content_description_notifications"
-        android:icon="@drawable/baseline_circle_notifications_24"
+        android:icon="@drawable/ic_circle_notifications_24"
         android:title="@string/notifications"
         app:showAsAction="always" />
 
